# tokio-tasker

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: echo.rs
src/: future_ext.rs  join_stream.rs  lib.rs  signaller.rs  stopper.rs  tasker.rs  tests.rs
tests/: tests.rs
