[package]
name = "tokio-tasker"
version = "1.1.0"
description = "Lets you stop and join groups of Tokio tasks."
authors = ["Vojtech Kral <vojtech@kral.pm>"]
license-file = "LICENSE"
edition = "2018"
resolver = "2"

[dependencies]
futures-util = "0.3.17"
parking_lot = "0.12.0"
pin-project-lite = "0.2.7"
tokio = { version = "1.12.0", features = ["rt", "sync"] }

[dev-dependencies]
ctrlc = "3.2.1"
eyre = "0.6.5"
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
